Eliminated "Findbugs" warnings.
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/math/trunk@1074951 13f79535-47bb-0310-9956-ffa450edef68